--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,19 +3,30 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Static Index</title>
+        <title>Cold</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-        
+        <!-- favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+        <link rel="manifest" href="./favicon_io/site.webmanifest">
+        <!-- <link rel="stylesheet" href="style.css"> -->
     </head>
-    <h1>Static Index</h1>
+    
     <body class="bg-dark text-white mt-3">
         <div class="container">
+            
+            <form action="/logout" method="POST" class="position-absolute top-0 end-0">
+                <button type="submit" class="btn btn-dark">Logout</button>
+            </form>
+        </div>
+
+        <div class="container story mt-5">
             <p>You wake in the middle of the night. You hear something downstairs. </p>
             <div class="input-group mb-3">
                 <input type="text" class="form-control bg-dark text-white" id="user-input">
-              </div>
+            </div>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
