--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,11 +6,18 @@
         <title>Login</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+        <link rel="manifest" href="/favicon_io/site.webmanifest">
+        <!-- <link rel="stylesheet" href="/style.css"> -->
     </head>
 
     <body class="bg-dark text-white">
-
-            <div class="container mt-5 w-50">
+      
+            <div class="container mt-5 w-25">
+              <h1 class="text-center mb-3">C  o  l  d</h1>
                 <form action="/login" method="POST">
                     <div class="mb-3">
                       <label for="username" class="form-label">Username</label>
@@ -20,7 +27,11 @@
                       <label for="password" class="form-label">Password</label>
                       <input type="password" class="form-control bg-dark text-white" id="password" name="password">
                     </div>
-                    <button type="submit" class="btn btn-light">Login</button>
+                    <button type="submit" class="btn btn-light w-100 mb-3">Login</button>
+                  </form>
+                  <p class="text-center">or</p>
+                  <form action="/register" method="get">
+                    <button type="submit" class="btn btn-secondary w-100">Sign Up</button>
                   </form>
             </div>
         
