--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,31 +6,41 @@
         <title>Register</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+        <link rel="manifest" href="./favicon_io/site.webmanifest">
+        <!-- <link rel="stylesheet" href="style.css"> -->
     </head>
 
     <body class="bg-dark text-white">
-        <div class="container mt-5 w-50">
+
+        <div class="container mt-5 w-25">
+          <h1 class="text-center mb-3">C  o  l  d</h1>
             <form action="/register" method="POST">
                 <div class="mb-3">
                   <label for="username" class="form-label">Username</label>
-                  <input type="text" class="form-control bg-dark text-white" id="username" name="username" aria-describedby="username" autocomplete="off">
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                  <input type="text" class="form-control bg-dark text-white" id="username" name="username" aria-describedby="username" autocomplete="off" >
                 </div>
                 <div class="mb-3">
                   <label for="password" class="form-label">Password</label>
-                  <input type="password" class="form-control bg-dark text-white" id="password" name="password">
+                  <input type="password" class="form-control bg-dark text-white" id="password" name="password" minlength="8" maxlength="16" >
                   <div id="passwordHelpBlock" class="form-text mb-3">
-                    Your password must be 8-20 characters long, contain letters and numbers.
+                    Your password must be 8-16 characters long.
                   </div>
                 </div>
                 <div class="mb-3">
-                    <!-- <label for="confirm-password" class="form-label">Confirm Password</label> -->
-                    <input type="password" class="form-control bg-dark text-white" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password">
+                    <input type="password" class="form-control bg-dark text-white" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" minlength="8" maxlength="16">
                 </div>
-                <button type="submit" class="btn btn-light">Register</button>
+                <button type="submit" class="btn btn-light w-100 mb-2">Register</button>
+              </form>
+              <p class="text-center">or</p>
+              <form action="/login" method="get">
+                <button type="submit" class="btn btn-secondary w-100">Login</button>
               </form>
         </div>
-        
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
