Working with JSON DB

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,8 @@
-.story p { animation: fadeIn 8s; }
+/* input { 
+  animation: fadeIn 4s;
+ }
 
 @keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
-  }
+} */
