--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,22 +11,26 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
         <link rel="manifest" href="./favicon_io/site.webmanifest">
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body class="bg-dark text-white mt-3">
         <div class="container">
-            
             <form action="/logout" method="POST" class="position-absolute top-0 end-0">
                 <button type="submit" class="btn btn-dark">Logout</button>
             </form>
         </div>
 
-        <div class="container story mt-5">
-            <p>You wake in the middle of the night. You hear something downstairs. </p>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control bg-dark text-white" id="user-input">
-            </div>
+        <div class="container mt-5 story" id="story-line">
+            <% for (let i = 0; i < story.length; i++) { %>
+                <p><%= story[i] %></p>
+            <% } %>
+            <p id="line"></p>
+            <form action="/" method="POST">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control bg-dark text-white" id="user-input" name="userInput">
+                </div>
+            </form>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
