--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,30 +11,50 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
         <link rel="manifest" href="./favicon_io/site.webmanifest">
+
         <link rel="stylesheet" href="style.css">
     </head>
+
+    
     
     <body class="bg-dark text-white mt-3">
-        <div class="container">
+
+        <div>
             <form action="/logout" method="POST" class="position-absolute top-0 end-0">
                 <button type="submit" class="btn btn-dark">Logout</button>
             </form>
         </div>
 
-        <div class="container mt-5 story" id="story-line">
-            <% for (let i = 0; i < story.length; i++) { %>
-                <p><%= story[i] %></p>
-            <% } %>
-            <p id="line"></p>
-            <form action="/" method="POST">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control bg-dark text-white" id="user-input" name="userInput">
-                </div>
+        <div class="container gap-2 w-50 mt-5">
+            <div class="story">
+                <!-- load story so far -->
+                <% for (let i = 0; i < userStoryPath.length; i++) { %>
+                    <p class="mb-2"><%= userStoryPath[i] %></p>
+                <% } %>
+            </div>
+            <form action="/" method="post">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col d-grid p-1 ps-0">
+                            <button type="submit" class="btn btn-outline-light" name="usersChosenOptionId" value=<%= options[0].option_id %>><%= options[0].text %></button>
+                        </div>
+                        <div class="col d-grid p-1 pe-0">
+                            <button type="submit" class="btn btn-outline-light" name="usersChosenOptionId" value=<%= options[1].option_id %>><%= options[1].text %></button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col d-grid p-1 ps-0">
+                            <button type="submit" class="btn btn-outline-light" name="usersChosenOptionId" value=<%= options[2].option_id %>><%= options[2].text %></button>
+                        </div>
+                        <div class="col d-grid p-1 pe-0">
+                            <button type="submit" class="btn btn-outline-light" name="usersChosenOptionId" value=<%= options[3].option_id %>><%= options[3].text %></button>
+                        </div>
+                      </div>
+                  </div>
             </form>
         </div>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <script src="./app.js"></script>
+        <!-- <script src="./app.js"></script> -->
     </body>
 </html>
